# pumpguard-operator

./: .gitignore  Dockerfile  Dockerfile.operator  README.md  env.example  package-lock.json  package.json
k8s/crds/: pumpguard-crd.yaml
k8s/deploy/: install.sh  operator.yaml
k8s/examples/: pumpguard-basic.yaml  pumpguard-full.yaml  token-monitor.yaml
k8s/monitoring/: grafana-configmap.yaml  grafana-dashboard.json  servicemonitor.yaml
operator/: package.json
operator/src/: index.js
pumpguard-rs/: .gitignore  Cargo.toml  Dockerfile  README.md  env.example
pumpguard-rs/public/: index.html
pumpguard-rs/src/: config.rs  main.rs
pumpguard-rs/src/dashboard/: mod.rs  server.rs
pumpguard-rs/src/modules/: mod.rs  rug_detector.rs  token_monitor.rs  whale_watcher.rs
pumpguard-rs/src/utils/: alerts.rs  database.rs  logger.rs  metrics.rs  mod.rs  solana.rs
src/: config.js  index.js
src/dashboard/: server.js
src/dashboard/public/: index.html
src/modules/: rugDetector.js  tokenMonitor.js  whaleWatcher.js
src/utils/: alerts.js  database.js  logger.js  metrics.js  solana.js
